# OOD-proof-mol-RL

./: PROJECT_OUTLINE.md  pyproject.toml
project/step_1_data_preparation/: fetch_and_clean.ipynb
project/step_2_pretrain_autoencoder/: pretrain_ae.ipynb
project/step_3_pretrain_generator/: pretrain_transformer.ipynb
project/step_4_train_oracle/: train_oracle.ipynb  train_rf_baseline.ipynb
project/step_5_validate_oracle/: validate_oracle.ipynb
project/step_6_rl_experiments/: run_rl.ipynb
project/step_7_analysis/: analysis.ipynb
src/molrl/: chem_constants.py  cheminformatics.py  data.py  dataloader.py  eval.py  models.py  nnx_modules.py  rl.py  tokenizer.py  training.py  utils.py
