[project]
name = "molrl"
version = "0.1.0"
description = "Unfamiliarity-Aware Molecular Optimization via Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # JAX ecosystem
    "jax",
    "jax-mps",          # Apple Silicon MPS/MLX backend (via PJRT plugin)
    "flax",             # Flax NNX
    "optax",            # JAX optimisers
    "orbax-checkpoint", # JAX-native checkpointing

    # Hyperparameter optimisation
    "optuna",

    # Classical ML baseline
    "scikit-learn",

    # Cheminformatics
    "rdkit",

    # Data wrangling
    "polars",
    "pandas",

    # Data loading
    "h5py",
    "grain",            # Google DeepMind Grain — chunked HDF5 + prefetching

    # Experiment tracking
    "wandb",

    # Visualisation
    "plotnine",

    # Utilities
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
    "jupyter",
    "nbformat",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molrl"]

[tool.uv]
# jax-mps requires jaxlib 0.9.x (matches jax 0.9.x) and Python 3.13.
# Set JAX_PLATFORMS=mps at runtime to select the MPS backend explicitly;
# the plugin auto-registers so JAX will prefer it by default on Apple Silicon.
